# SD-Video-Streaming

./: .gitignore  .travis.yml  CMakeLists.txt  Client.cpp  Makefile  Portal.cpp  README.md  Server.cpp  StreamServer.ice  appveyor.yml  commands.txt  config.client  config.icebox  config.portal  config.pub  config.server  config.service  config.sub  download_videos.sh  run_basic_test.sh  set_things_up.sh  sonar-project.properties  test.sh
auxiliary/: Auxiliary.h
client_src/: Client.cpp
extras/: ClientCommands.txt  nginx.conf
ice/: StreamServer.ice
ice_config_dir/: config.client  config.icebox  config.server  config.service
portal_src/: Portal.cpp
server_src/: Server.cpp
